<resources>
    <string name="app_name">Cook Book</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="saved">My Recipes</string>
    <string name="back_button">Back Button</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="save_recipe_button">Save Recipe Button</string>
    <string name="contentDescription">Image of Recipe</string>
    <string name="search_api">Search Recipes </string>
    <string name="search_saved">Search your saved recipes</string>
    <string name="no_results">No results found</string>
    <string name="recipe_saved">Added to saved recipes!</string>
    <string name="recipe_deleted">Removed from saved recipes!</string>
    <string name="undo">Undo</string>

    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_other">Or use another method</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="action_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="action_sign_in_with_phone">Sign in with Phone Number</string>
    <string name="continue_">Continue</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="country_code">Country Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_phone_number">Enter valid phone number</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to facebook -->
    <string name="facebook_app_id">318282212750270</string>
    <string name="fb_login_protocol_scheme">fb318282212750270</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <!-- Preference Titles -->
    <string name="account">Account</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notifications">Notifications</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_message">You can see your saved recipes when you sign back in.</string>
    <string name="delete_account_summary">If you tap "Delete Account" you will initiate an irreversible delete
    sequence of all account information, including saved recipes.</string>
    <string name="delete_account_message">Please confirm you want to delete your account.
        This will delete all account information, including any saved recipes!</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_delete_confirmation">Are you sure you want to delete your account?</string>
    <string name="nevermind">Nevermind</string>
    <string name="reauthenticate_message">It seems your credentials have expired. You must login again to perform this action.</string>
    <string name="settings_option">Settings Option</string>
    <string name="enter_email_address_message">Enter an email address for account recovery</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="enter_valid_email">Enter valid email address</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="enter_the_otp_sent">Enter the OTP sent to your device</string>
    <string name="edit_account">Edit account information</string>

    <string name="shared_preferences_key">com.zenger.cookbook.SIGN_IN_STATUS</string>

</resources>