<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account">

        <Preference
            app:key="sign_out"
            app:title="@string/sign_out" />

        <com.zenger.cookbook.ui.widgets.DeleteAccountPreference
            app:key="delete_account"
            app:summary="@string/delete_account_summary"
            app:title="@string/delete_account" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications">


    </PreferenceCategory>

</PreferenceScreen>